--- a/style.css
+++ b/style.css
@@ -85,7 +85,9 @@ body {
 .home h2,
 .info h2,
 .story h2,
-.gallery h2 {
+.gallery h2,
+.rsvp h2,
+.gifts h2 {
   color: var(--pink);
   font-family: "sacramento";
   font-size: 5rem;
@@ -164,13 +166,17 @@ body {
   font-weight: 300;
 }
 
-.story {
+.story,
+.gallery,
+.rsvp,
+.gifts {
   padding-top: 10rem;
   padding-bottom: 8rem;
 }
 
 .story span,
-.gallery span {
+.gallery span,
+.gifts span {
   text-transform: uppercase;
   color: #666;
   font-size: 0.9rem;
@@ -180,7 +186,9 @@ body {
 }
 
 .story p,
-.gallery p {
+.gallery p,
+.rsvp p,
+.gifts p {
   font-size: 1rem;
   font-weight: 300;
 }
@@ -277,6 +285,55 @@ body {
 
 .gallery {
   background-color: #ccc;
+}
+
+.rsvp {
+  background-color: var(--bg);
+}
+
+.rsvp h2 {
+  font-size: 4.5rem;
+}
+
+.rsvp p {
+  color: #fff;
+}
+
+.rsvp form label {
+  color: #fff;
+}
+
+.rsvp button {
+  background-color: var(--pink);
+  color: #fff;
+  border: 1px solid var(--pink);
+}
+.rsvp button:hover {
+  background-color: #fff;
+  color: #e25396;
+  border: 1px solid #fff;
+}
+
+footer {
+  padding: 3rem;
+  background-color: var(--pink);
+  color: #ccc;
+}
+
+footer a {
+  color: var(--bg);
+  font-weight: bold;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #fff;
+}
+
+footer li {
+  list-style: none;
+  display: inline;
+  margin: 4rem;
 }
 /*media query */
 /* Extra erage */
